Circle view textview + font + background color fixes

--- a/app/src/main/res/layout/content_course_details.xml
+++ b/app/src/main/res/layout/content_course_details.xml
@@ -1,79 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="MissingPrefix"
-    android:id="@+id/content_course_details"
+    android:id="@+id/myScrollingContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="15dp"
-    android:orientation="vertical"
+    android:background="@color/default_color"
+    android:fillViewport="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.app.studymanager.coursedetails.CourseDetailsActivity"
+    tools:ignore="MissingPrefix"
     tools:showIn="@layout/activity_course_details">
 
-    <TextView
-        android:id="@+id/text_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/text_xsmall"
-        android:text="@string/description"
-        fontPath="fonts/Asap-Regular.ttf"/>
+        android:layout_height="match_parent"
+        android:layout_margin="15dp">
 
-    <TextView
-        android:id="@+id/description_tv"
-        android:layout_below="@+id/text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:textColor="@color/default_tv_color"
-        android:textSize="@dimen/text_xsmall"
-        fontPath="fonts/Asap-Regular.ttf"/>
+        <TextView
+            android:id="@+id/text_view"
+            fontPath="fonts/Asap-Bold.ttf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/description"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/text_small" />
 
-    <View
-        android:id="@+id/view_id"
-        android:layout_below="@+id/description_tv"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_light"/>
+        <TextView
+            android:id="@+id/description_tv"
+            fontPath="fonts/Asap-Regular.ttf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_view"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:textColor="@color/default_tv_color"
+            android:textSize="@dimen/text_xsmall" />
 
-    <TextView
-        android:id="@+id/text_view2"
-        android:layout_below="@+id/view_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/text_xsmall"
-        android:text="@string/recommended"
-        fontPath="fonts/Asap-Regular.ttf" />
+        <View
+            android:id="@+id/view_id"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/description_tv"
+            android:background="@color/gray_light" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_below="@+id/text_view2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        <TextView
+            android:id="@+id/text_view2"
+            fontPath="fonts/Asap-Bold.ttf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view_id"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/recommended"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/text_small" />
 
-    <Button
-        android:id="@+id/check_subscription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:onClick="courseSubscription"
-        android:textAllCaps="false"
-        android:textSize="@dimen/text_xsmall"
-        android:textColor="@color/colorPrimary"
-        style="?android:attr/borderlessButtonStyle"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_view2"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <ProgressBar
-        android:id="@+id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        <Button
+            android:id="@+id/check_subscription"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/recycler_view"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:onClick="courseSubscription"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/text_xsmall" />
 
-</RelativeLayout>
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
+</android.support.v4.widget.NestedScrollView>
