--- a/app/src/main/res/drawable/green_btn_txt.xml
+++ b/app/src/main/res/drawable/green_btn_txt.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/gray_lighest" android:state_pressed="true"/>
+    <item android:color="@color/default_color" android:state_pressed="true"/>
     <item android:color="@color/colorPrimary"/>
 
 </selector>
