--- a/app/src/main/res/layout/content_bottom_bar.xml
+++ b/app/src/main/res/layout/content_bottom_bar.xml
@@ -5,6 +5,7 @@
     android:id="@+id/content_bottom_bar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/default_color"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.app.studymanager.bottombar.BottomBarActivity"
     tools:showIn="@layout/activity_bottom_bar">
