--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="mTitleSize">16dp</dimen>
     <dimen name="mSubTitleSize">12dp</dimen>
     <dimen name="title_subtitle_space">10dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
