--- a/app/src/main/res/layout/fragment_target_date.xml
+++ b/app/src/main/res/layout/fragment_target_date.xml
@@ -55,6 +55,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -88,6 +89,11 @@
                 android:textSize="@dimen/text_xsmall" />
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_light" />
 
         <TextView
             fontPath="fonts/Asap-Bold.ttf"
