--- a/app/src/main/res/layout/content_course_details.xml
+++ b/app/src/main/res/layout/content_course_details.xml
@@ -15,7 +15,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp">
+        android:padding="15dp">
 
         <TextView
             android:id="@+id/text_view"
