--- a/app/src/main/res/layout/courses_item.xml
+++ b/app/src/main/res/layout/courses_item.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
+                android:lineSpacingExtra="3dp"
                 android:textColor="@color/default_tv_color"
                 android:textSize="@dimen/text_medium" />
 
