--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#06B089</color>
     <color name="blue">#2196F3</color>
     <color name="gray_light">#C0C0C0</color>
+    <color name="gray_lightest">#EEEEEE</color>
     <color name="default_color">#FAFAFA</color>
     <color name="gray_dark">#424242</color>
     <color name="default_tv_color">#515151</color>
